[gd_scene load_steps=2 format=2]

[ext_resource path="res://Widget/TypeAttributes/ModifierTypeAtt.gd" type="Script" id=1]

[node name="ModifierTypeAtt" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.0
margin_top = -52.0
margin_right = 159.0
margin_bottom = 52.0
script = ExtResource( 1 )

[node name="Row1" type="HBoxContainer" parent="."]
margin_right = 318.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
custom_constants/separation = 10

[node name="Label" type="Label" parent="Row1"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Invisible :"
align = 2

[node name="InvisibleCheckBox" type="CheckBox" parent="Row1"]
margin_left = 110.0
margin_right = 134.0
margin_bottom = 25.0

[node name="Row2" type="HBoxContainer" parent="."]
margin_top = 29.0
margin_right = 318.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 25 )
custom_constants/separation = 10

[node name="Label" type="Label" parent="Row2"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Secret :"
align = 2

[node name="SecretCheckBox" type="CheckBox" parent="Row2"]
margin_left = 110.0
margin_right = 134.0
margin_bottom = 25.0

[node name="Row3" type="HBoxContainer" parent="."]
margin_top = 58.0
margin_right = 318.0
margin_bottom = 83.0
rect_min_size = Vector2( 0, 25 )
custom_constants/separation = 10

[node name="Label" type="Label" parent="Row3"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Subtype :"
align = 2

[node name="SubtypeOptionButton" type="OptionButton" parent="Row3"]
margin_left = 110.0
margin_right = 230.0
margin_bottom = 25.0
rect_min_size = Vector2( 120, 0 )
text = "tile"
items = [ "tile", null, false, 0, null, "player", null, false, 1, null ]
selected = 0

[node name="Row4" type="HBoxContainer" parent="."]
margin_top = 87.0
margin_right = 318.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 25 )
custom_constants/separation = 10

[node name="Label" type="Label" parent="Row4"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Turn limit :"
align = 2

[node name="TurnlimitSpinBox" type="SpinBox" parent="Row4"]
margin_left = 110.0
margin_right = 184.0
margin_bottom = 25.0
rounded = true
align = 1

[node name="Row5" type="HBoxContainer" parent="."]
margin_top = 116.0
margin_right = 318.0
margin_bottom = 141.0
rect_min_size = Vector2( 0, 25 )
custom_constants/separation = 10

[node name="Label" type="Label" parent="Row5"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Trigger limit :"
align = 2

[node name="TriggerlimitSpinBox" type="SpinBox" parent="Row5"]
margin_left = 110.0
margin_right = 184.0
margin_bottom = 25.0
rounded = true
align = 1

